crates/atlas-runtime/tests/snapshots/stdlib__prelude_global_shadowing_variable.snap
---
source: crates/atlas-runtime/tests/stdlib.rs
expression: diagnostics
---
- diag_version: 1
  level: error
  code: AT1012
  message: "Cannot shadow prelude builtin 'len' in global scope"
  file: "<unknown>"
  line: 1
  column: 68
  length: 3
  snippet: ""
  label: shadows prelude builtin
  help: Prelude builtins cannot be redefined at the top level. Use a different name or shadow in a nested scope.
